@@ -19,12 +19,13 @@ import lombok.EqualsAndHashCode;
 import lombok.NoArgsConstructor;
 import lombok.Value;
 import org.intellij.lang.annotations.Language;
+import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.Test;
 import org.openrewrite.config.Environment;
 import org.openrewrite.config.RecipeDescriptor;
 import org.openrewrite.config.YamlResourceLoader;
-import org.openrewrite.internal.lang.Nullable;
 import org.openrewrite.marker.Markers;
+import org.openrewrite.marker.RecipesThatMadeChanges;
 import org.openrewrite.test.RewriteTest;
 import org.openrewrite.text.FindAndReplace;
 import org.openrewrite.text.PlainText;
@@ -35,7 +36,6 @@ import java.net.URI;
 import java.nio.charset.Charset;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Properties;
 import java.util.UUID;
@@ -49,23 +49,6 @@ import static org.openrewrite.test.SourceSpecs.text;
 
 class RecipeLifecycleTest implements RewriteTest {
 
-    @Test
-    void panic() {
-        var ctx = new InMemoryExecutionContext();
-        ctx.putMessage(Recipe.PANIC, true);
-
-        rewriteRun(
-          spec -> spec.recipe(toRecipe(() -> new TreeVisitor<>() {
-              @Override
-              public Tree visit(@Nullable Tree tree, ExecutionContext ctx) {
-                  fail("Should never have reached a visit method");
-                  return tree;
-              }
-          })).executionContext(ctx),
-          text("hello")
-        );
-    }
-
     @DocumentExample
     @Test
     void generateFile() {
@@ -77,10 +60,101 @@ class RecipeLifecycleTest implements RewriteTest {
               .withMaxCycles(1)
             )
             .afterRecipe(run -> assertThat(run.getChangeset().getAllResults().stream()
-              .map(r -> r.getRecipeDescriptorsThatMadeChanges().get(0).getName()))
+              .map(r -> r.getRecipeDescriptorsThatMadeChanges().getFirst().getName()))
               .containsOnly("test.GeneratingRecipe")),
           text(null, "test", spec -> spec.path("test.txt"))
         );
+    }
+
+    @Test
+    void panic() {
+        var ctx = new InMemoryExecutionContext();
+        ctx.putMessage(Recipe.PANIC, true);
+
+        //noinspection NullableProblems
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new TreeVisitor<>() {
+              @Override
+              public Tree visit(Tree tree, ExecutionContext ctx) {
+                  fail("Should never have reached a visit method");
+                  return tree;
+              }
+          })).executionContext(ctx),
+          text("hello")
+        );
+    }
+
+    @Test
+    void twoGeneratingRecipesCreateOnlyOneFile() {
+        rewriteRun(spec -> spec.recipeFromYaml("""
+              ---
+              type: specs.openrewrite.org/v1beta/recipe
+              name: test.recipe
+              displayName: Create twice
+              description: Scanning recipes later in the stack should scan files created by earlier recipes, avoiding duplicate file creation.
+              recipeList:
+                - org.openrewrite.text.CreateTextFile:
+                    fileContents: first
+                    relativeFileName: test.txt
+                    overwriteExisting: false
+                - org.openrewrite.text.CreateTextFile:
+                    fileContents: second
+                    relativeFileName: test.txt
+                    overwriteExisting: false
+              """,
+            "test.recipe"
+          ),
+          text(null, "first", spec -> spec.path("test.txt")));
+    }
+
+    @Test
+    void errorDuringScanningPhase() {
+        rewriteRun(
+          spec -> spec.recipe(new ErrorDuringScanningPhase())
+            .executionContext(new InMemoryExecutionContext()),
+          text("hello",
+            "hello",
+            spec -> spec.afterRecipe(t -> assertThat(t.getMarkers().findFirst(RecipesThatMadeChanges.class))
+              .isNotEmpty()
+              .get()
+              .as("Exception thrown in the scanning phase should record the responsible recipe")
+              .matches(m -> "org.openrewrite.RecipeLifecycleTest$ErrorDuringScanningPhase".equals(m.getRecipes().iterator().next().getFirst().getDescriptor().getName()))
+            )
+          ));
+    }
+
+    @Value
+    @EqualsAndHashCode(callSuper = false)
+    static class ErrorDuringScanningPhase extends ScanningRecipe<Integer> {
+
+        @Override
+        public Integer getInitialValue(ExecutionContext ctx) {
+            return 0;
+        }
+
+        @Override
+        public TreeVisitor<?, ExecutionContext> getScanner(Integer acc) {
+            //noinspection NullableProblems
+            return new TreeVisitor<>() {
+                @Override
+                public Tree visit(Tree tree, ExecutionContext ctx) {
+                    if (tree.getMarkers().findFirst(RecipesThatMadeChanges.class).isPresent()) {
+                        return tree;
+                    }
+                    throw new IllegalStateException("");
+                }
+            };
+        }
+
+        @Override
+        public String getDisplayName() {
+            return "Throw exception";
+        }
+
+        @Override
+        public String getDescription() {
+            return "Throws an exception in the scanning phase.";
+        }
     }
 
     @Value
@@ -100,9 +174,9 @@ class RecipeLifecycleTest implements RewriteTest {
 
         @Override
         public List<Recipe> getRecipeList() {
-            return Arrays.asList(
+            return List.of(
               new DeleteSourceFiles("test.txt"),
-              new FindAndReplace("test", "", null, null, null, null, null));
+              new FindAndReplace("test", "", null, null, null, null, null, null));
         }
     }
 
@@ -227,6 +301,26 @@ class RecipeLifecycleTest implements RewriteTest {
         }
     }
 
+    @DocumentExample
+    @Test
+    void accurateReportingOfRecipesMakingChanges() {
+        rewriteRun(
+          spec -> spec
+            .recipes(testRecipe("Change1"), noop(), testRecipe("Change2"))
+            .validateRecipeSerialization(false)
+            .afterRecipe(run -> {
+                var changes = run.getChangeset().getAllResults();
+                assertThat(changes).hasSize(1);
+                assertThat(changes.getFirst().getRecipeDescriptorsThatMadeChanges().stream().map(RecipeDescriptor::getName))
+                  .containsExactlyInAnyOrder("Change1", "Change2");
+            }),
+          text(
+            "Hello",
+            "Change2Change1Hello"
+          )
+        );
+    }
+
     @Issue("https://github.com/openrewrite/rewrite/issues/389")
     @Test
     void sourceFilesAcceptOnlyApplicableVisitors() {
@@ -239,26 +333,6 @@ class RecipeLifecycleTest implements RewriteTest {
             fooVisitor.visit(source, ctx);
             textVisitor.visit(source, ctx);
         }
-    }
-
-    @DocumentExample
-    @Test
-    void accurateReportingOfRecipesMakingChanges() {
-        rewriteRun(
-          spec -> spec
-            .recipes(testRecipe("Change1"), noop(), testRecipe("Change2"))
-            .validateRecipeSerialization(false)
-            .afterRecipe(run -> {
-                var changes = run.getChangeset().getAllResults();
-                assertThat(changes).hasSize(1);
-                assertThat(changes.get(0).getRecipeDescriptorsThatMadeChanges().stream().map(RecipeDescriptor::getName))
-                  .containsExactlyInAnyOrder("Change1", "Change2");
-            }),
-          text(
-            "Hello",
-            "Change2Change1Hello"
-          )
-        );
     }
 
     private Recipe testRecipe(@Language("markdown") String name) {
@@ -276,44 +350,48 @@ class RecipeLifecycleTest implements RewriteTest {
     @Test
     void canCallImperativeRecipeWithoutArgsFromDeclarative() {
         rewriteRun(spec -> spec.recipeFromYaml("""
-            ---
-            type: specs.openrewrite.org/v1beta/recipe
-            name: test.recipe
-            displayName: Test Recipe
-            recipeList:
-              - org.openrewrite.NoArgRecipe
-            """,
-          "test.recipe"
-          ),
-          text("Hi", "NoArgRecipeHi"));
-    }
-
-    @Test
-    void canCallImperativeRecipeWithUnnecessaryArgsFromDeclarative() {
-        rewriteRun(spec -> spec.recipeFromYaml("""
-            ---
-            type: specs.openrewrite.org/v1beta/recipe
-            name: test.recipe
-            displayName: Test Recipe
-            recipeList:
-              - org.openrewrite.NoArgRecipe:
-                  foo: bar
-            """,
+              ---
+              type: specs.openrewrite.org/v1beta/recipe
+              name: test.recipe
+              displayName: Test Recipe
+              description: Test Recipe.
+              recipeList:
+                - org.openrewrite.NoArgRecipe
+              """,
             "test.recipe"
           ),
           text("Hi", "NoArgRecipeHi"));
     }
 
     @Test
+    void canCallImperativeRecipeWithUnnecessaryArgsFromDeclarativeInTests() {
+        rewriteRun(spec -> spec.recipeFromYaml("""
+              ---
+              type: specs.openrewrite.org/v1beta/recipe
+              name: test.recipe
+              displayName: Test Recipe
+              description: Test Recipe.
+              recipeList:
+                - org.openrewrite.NoArgRecipe:
+                    foo: bar
+              """,
+            "test.recipe"
+          ),
+          text("Hi", "NoArgRecipeHi")
+        );
+    }
+
+    @Test
     void canCallRecipeWithNoExplicitConstructor() {
         rewriteRun(spec -> spec.recipeFromYaml("""
-            ---
-            type: specs.openrewrite.org/v1beta/recipe
-            name: test.recipe
-            displayName: Test Recipe
-            recipeList:
-              - org.openrewrite.DefaultConstructorRecipe
-            """,
+              ---
+              type: specs.openrewrite.org/v1beta/recipe
+              name: test.recipe
+              displayName: Test Recipe
+              description: Test Recipe.
+              recipeList:
+                - org.openrewrite.DefaultConstructorRecipe
+              """,
             "test.recipe"
           ),
           text("Hi", "DefaultConstructorRecipeHi"));
@@ -322,25 +400,28 @@ class RecipeLifecycleTest implements RewriteTest {
     @Test
     void declarativeRecipeChain() {
         rewriteRun(spec -> spec.recipeFromYaml("""
-            ---
-            type: specs.openrewrite.org/v1beta/recipe
-            name: test.recipe.a
-            displayName: Test Recipe
-            recipeList:
-              - test.recipe.b
-            ---
-            type: specs.openrewrite.org/v1beta/recipe
-            name: test.recipe.b
-            displayName: Test Recipe
-            recipeList:
-              - test.recipe.c
-            ---
-            type: specs.openrewrite.org/v1beta/recipe
-            name: test.recipe.c
-            displayName: Test Recipe
-            recipeList:
-              - org.openrewrite.NoArgRecipe
-            """,
+              ---
+              type: specs.openrewrite.org/v1beta/recipe
+              name: test.recipe.a
+              displayName: Test Recipe
+              description: Test Recipe.
+              recipeList:
+                - test.recipe.b
+              ---
+              type: specs.openrewrite.org/v1beta/recipe
+              name: test.recipe.b
+              displayName: Test Recipe
+              description: Test Recipe.
+              recipeList:
+                - test.recipe.c
+              ---
+              type: specs.openrewrite.org/v1beta/recipe
+              name: test.recipe.c
+              displayName: Test Recipe
+              description: Test Recipe.
+              recipeList:
+                - org.openrewrite.NoArgRecipe
+              """,
             "test.recipe.a"
           ),
           text("Hi", "NoArgRecipeHi"));
@@ -350,31 +431,34 @@ class RecipeLifecycleTest implements RewriteTest {
     void declarativeRecipeChainAcrossFiles() {
         rewriteRun(spec -> spec.recipe(Environment.builder()
             .load(new YamlResourceLoader(new ByteArrayInputStream("""
-                ---
-                type: specs.openrewrite.org/v1beta/recipe
-                name: test.recipe.c
-                displayName: Test Recipe
-                recipeList:
-                  - org.openrewrite.NoArgRecipe
-                """.getBytes()),
+              ---
+              type: specs.openrewrite.org/v1beta/recipe
+              name: test.recipe.c
+              displayName: Test Recipe
+              description: Test Recipe.
+              recipeList:
+                - org.openrewrite.NoArgRecipe
+              """.getBytes()),
               URI.create("rewrite.yml"), new Properties()))
             .load(new YamlResourceLoader(new ByteArrayInputStream("""
-                ---
-                type: specs.openrewrite.org/v1beta/recipe
-                name: test.recipe.b
-                displayName: Test Recipe
-                recipeList:
-                  - test.recipe.c
-                """.getBytes()),
+              ---
+              type: specs.openrewrite.org/v1beta/recipe
+              name: test.recipe.b
+              displayName: Test Recipe
+              description: Test Recipe.
+              recipeList:
+                - test.recipe.c
+              """.getBytes()),
               URI.create("rewrite.yml"), new Properties()))
             .load(new YamlResourceLoader(new ByteArrayInputStream("""
-                ---
-                type: specs.openrewrite.org/v1beta/recipe
-                name: test.recipe.a
-                displayName: Test Recipe
-                recipeList:
-                  - test.recipe.b
-                """.getBytes()),
+              ---
+              type: specs.openrewrite.org/v1beta/recipe
+              name: test.recipe.a
+              displayName: Test Recipe
+              description: Test Recipe.
+              recipeList:
+                - test.recipe.b
+              """.getBytes()),
               URI.create("rewrite.yml"), new Properties()))
             .build()
             .activateRecipes("test.recipe.a")),
@@ -390,8 +474,8 @@ class RecipeLifecycleTest implements RewriteTest {
     @Test
     void declarativeRecipeChainFromResourcesIncludesImperativeRecipesInDescriptors() {
         rewriteRun(spec -> spec.recipeFromResources("test.declarative.sample.a")
-            .afterRecipe(recipeRun -> assertThat(recipeRun.getChangeset().getAllResults().get(0)
-              .getRecipeDescriptorsThatMadeChanges().get(0).getRecipeList().get(0).getRecipeList().get(0)
+            .afterRecipe(recipeRun -> assertThat(recipeRun.getChangeset().getAllResults().getFirst()
+              .getRecipeDescriptorsThatMadeChanges().getFirst().getRecipeList().getFirst()
               .getDisplayName()).isEqualTo("Change text")),
           text("Hi", "after"));
     }
