@@ -20,7 +20,6 @@ import org.junit.jupiter.api.Test;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.nio.charset.Charset;
-import java.util.Arrays;
 import java.util.List;
 
 import static java.nio.charset.StandardCharsets.ISO_8859_1;
@@ -33,15 +32,52 @@ class EncodingDetectingInputStreamTest {
 
     @Test
     void detectUTF8Bom() throws IOException {
-        String bom = "\uFEFF";
-        try (EncodingDetectingInputStream is = read(bom, UTF_8)) {
+        String str = "\uFEFF";
+        try (EncodingDetectingInputStream is = new EncodingDetectingInputStream(new ByteArrayInputStream(str.getBytes(UTF_8)))) {
+            assertThat(is.readFully()).isEqualTo("");
+            assertThat(is.isCharsetBomMarked()).isTrue();
+        }
+    }
+
+    @Test
+    void emptyUtf8() throws IOException {
+        String str = "";
+        try (EncodingDetectingInputStream is = new EncodingDetectingInputStream(new ByteArrayInputStream(str.getBytes(UTF_8)))) {
+            assertThat(is.readFully()).isEqualTo(str);
+            assertThat(is.isCharsetBomMarked()).isFalse();
+        }
+    }
+
+    @Test
+    void singleCharUtf8() throws IOException {
+        String str = "1";
+        try (EncodingDetectingInputStream is = new EncodingDetectingInputStream(new ByteArrayInputStream(str.getBytes(UTF_8)))) {
+            assertThat(is.readFully()).isEqualTo(str);
+            assertThat(is.isCharsetBomMarked()).isFalse();
+        }
+    }
+
+    @Test
+    void skipUTF8Bom() throws IOException {
+        String bom = "\uFEFFhello";
+        try (EncodingDetectingInputStream is = new EncodingDetectingInputStream(new ByteArrayInputStream(bom.getBytes(UTF_8)))) {
+            assertThat(is.readFully()).isEqualTo("hello");
+            assertThat(is.isCharsetBomMarked()).isTrue();
+        }
+    }
+
+    @Test
+    void skipUTF8BomKnownEncoding() throws IOException {
+        String bom = "\uFEFFhello";
+        try (EncodingDetectingInputStream is = new EncodingDetectingInputStream(new ByteArrayInputStream(bom.getBytes(UTF_8)), UTF_8)) {
+            assertThat(is.readFully()).isEqualTo("hello");
             assertThat(is.isCharsetBomMarked()).isTrue();
         }
     }
 
     @Test
     void isUtf8() throws IOException {
-        List<String> accents = Arrays.asList("Café", "Lýðræðisríki");
+        List<String> accents = List.of("Café", "Lýðræðisríki");
         for (String accent : accents) {
             try (EncodingDetectingInputStream is = read(accent, UTF_8)) {
                 assertThat(is.getCharset()).isEqualTo(UTF_8);
@@ -51,7 +87,7 @@ class EncodingDetectingInputStreamTest {
 
     @Test
     void isWindows1252() throws IOException {
-        List<String> accents = Arrays.asList("Café", "Lýðræðisríki");
+        List<String> accents = List.of("Café", "Lýðræðisríki");
         for (String accent : accents) {
             try (EncodingDetectingInputStream is = read(accent, WINDOWS_1252)) {
                 assertThat(is.getCharset()).isEqualTo(WINDOWS_1252);
