@@ -15,12 +15,13 @@
  */
 package org.openrewrite.java;
 
+import org.intellij.lang.annotations.Language;
+import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.Test;
 import org.openrewrite.DocumentExample;
 import org.openrewrite.ExecutionContext;
 import org.openrewrite.Issue;
 import org.openrewrite.Tree;
-import org.openrewrite.internal.lang.Nullable;
 import org.openrewrite.java.style.ImportLayoutStyle;
 import org.openrewrite.java.tree.J;
 import org.openrewrite.style.NamedStyles;
@@ -30,47 +31,17 @@ import org.openrewrite.test.SourceSpec;
 import org.openrewrite.test.SourceSpecs;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
 import static java.util.Collections.emptySet;
 import static java.util.Collections.singletonList;
-import static org.openrewrite.java.Assertions.addTypesToSourceSet;
-import static org.openrewrite.java.Assertions.java;
-import static org.openrewrite.java.Assertions.srcMainJava;
+import static org.openrewrite.java.Assertions.*;
 import static org.openrewrite.test.RewriteTest.toRecipe;
 
 @SuppressWarnings("rawtypes")
 class AddImportTest implements RewriteTest {
-
-    @Issue("https://github.com/openrewrite/rewrite/issues/2155")
-    @Test
-    void addImportBeforeImportWithSameInsertIndex() {
-        rewriteRun(
-          spec -> spec.recipe(toRecipe(() -> new AddImport<>("org.junit.jupiter.api.Assertions", "assertFalse", false))),
-          java(
-            """
-              import static org.junit.jupiter.api.Assertions.assertTrue;
-
-              import org.junit.Test;
-
-              public class MyTest {
-              }
-              """,
-            """
-              import static org.junit.jupiter.api.Assertions.assertFalse;
-              import static org.junit.jupiter.api.Assertions.assertTrue;
-
-              import org.junit.Test;
-
-              public class MyTest {
-              }
-              """
-          )
-        );
-    }
 
     @DocumentExample
     @Test
@@ -101,6 +72,33 @@ class AddImportTest implements RewriteTest {
         );
     }
 
+    @Issue("https://github.com/openrewrite/rewrite/issues/2155")
+    @Test
+    void addImportBeforeImportWithSameInsertIndex() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new AddImport<>("org.junit.jupiter.api.Assertions", "assertFalse", false))),
+          java(
+            """
+              import static org.junit.jupiter.api.Assertions.assertTrue;
+
+              import org.junit.Test;
+
+              public class MyTest {
+              }
+              """,
+            """
+              import static org.junit.jupiter.api.Assertions.assertFalse;
+              import static org.junit.jupiter.api.Assertions.assertTrue;
+
+              import org.junit.Test;
+
+              public class MyTest {
+              }
+              """
+          )
+        );
+    }
+
     @Test
     void dontDuplicateImports() {
         rewriteRun(
@@ -113,7 +111,7 @@ class AddImportTest implements RewriteTest {
             """
               import org.springframework.http.HttpStatus;
               import org.springframework.http.HttpStatus.Series;
-                            
+
               class A {}
               """
           )
@@ -139,7 +137,7 @@ class AddImportTest implements RewriteTest {
               import org.junit.jupiter.api.*;
               import org.slf4j.Logger;
               import org.slf4j.LoggerFactory;
-                            
+
               class A {}
               """
           )
@@ -155,16 +153,16 @@ class AddImportTest implements RewriteTest {
             """
               import static org.junit.jupiter.api.Assertions.assertFalse;
               import static org.junit.jupiter.api.Assertions.assertTrue;
-                            
+
               import java.util.List;
 
               class A {}
               """,
             """
               import static org.junit.jupiter.api.Assertions.*;
-                            
+
               import java.util.List;
-                            
+
               class A {}
               """
           )
@@ -178,10 +176,89 @@ class AddImportTest implements RewriteTest {
           java(
             """
               package com.myorg;
-                            
+
               class A {
               }
               """
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/540")
+    @Test
+    void forceImportNonJavaLangRecord() {
+        // Add import for a class named `Record`, even within the same package, to avoid conflicts with java.lang.Record
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new AddImport<>("com.acme.bank.Record", null, false)))
+            .parser(JavaParser.fromJavaVersion().dependsOn("package com.acme.bank; public class Record {}")),
+          //language=java
+          java(
+            """
+              package com.acme.bank;
+
+              class Foo {
+              }
+              """,
+            """
+              package com.acme.bank;
+
+              import com.acme.bank.Record;
+
+              class Foo {
+              }
+              """,
+            spec -> spec.markers(javaVersion(11))
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/540")
+    @Test
+    void forceImportNonJavaLangRecordFromWildcardImport() {
+        // Add import for a class named `Record`, even within the same package, to avoid conflicts with java.lang.Record
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new AddImport<>("com.acme.bank.Record", null, false)))
+            .parser(JavaParser.fromJavaVersion().dependsOn("package com.acme.bank; public class Record {}")),
+          //language=java
+          java(
+            """
+              package com.acme.bank;
+
+              import com.acme.bank.*;
+
+              class Foo {
+              }
+              """,
+            """
+              package com.acme.bank;
+
+              import com.acme.bank.*;
+
+              import com.acme.bank.Record;
+
+              class Foo {
+              }
+              """,
+            spec -> spec.markers(javaVersion(11))
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/540")
+    @Test
+    void notForceImportJavaRecord() {
+        // Do not add import for java.lang.Record by default
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new AddImport<>("java.lang.Record", null, false))),
+          //language=java
+          java(
+            """
+              package com.acme.bank;
+
+              class Foo {
+              }
+              """,
+            spec -> spec.markers(javaVersion(11))
           )
         );
     }
@@ -241,7 +318,7 @@ class AddImportTest implements RewriteTest {
           java(
             """
               package com.myorg;
-                            
+
               class B {
               }
               """
@@ -249,7 +326,7 @@ class AddImportTest implements RewriteTest {
           java(
             """
               package com.myorg;
-                            
+
               class A {
               }
               """
@@ -309,7 +386,7 @@ class AddImportTest implements RewriteTest {
           java("class A {}",
             """
               import java.util.List;
-                            
+
               class A {}
               """
           )
@@ -323,7 +400,7 @@ class AddImportTest implements RewriteTest {
           java(
             """
               package a;
-                            
+
               class A {}
               """
           )
@@ -337,22 +414,22 @@ class AddImportTest implements RewriteTest {
           java(
             """
               package a;
-                            
+
               import com.sun.naming.*;
-                            
+
               import static java.util.Collections.*;
-                            
+
               class A {}
               """,
             """
               package a;
-                            
+
               import com.sun.naming.*;
-                            
+
               import java.util.List;
-                            
+
               import static java.util.Collections.*;
-                            
+
               class A {}
               """
           )
@@ -366,14 +443,14 @@ class AddImportTest implements RewriteTest {
           java(
             """
               package a;
-                            
+
               class A {}
               """,
             """
               package a;
-                            
+
               import java.util.List;
-                            
+
               class A {}
               """
           )
@@ -385,22 +462,22 @@ class AddImportTest implements RewriteTest {
     void addImportIfReferenced() {
         rewriteRun(
           spec -> spec.recipe(toRecipe(() ->
-              new JavaIsoVisitor<>() {
-                  @Override
-                  public J.ClassDeclaration visitClassDeclaration(J.ClassDeclaration classDecl, ExecutionContext ctx) {
-                      J.ClassDeclaration c = super.visitClassDeclaration(classDecl, ctx);
-                      maybeAddImport("java.math.BigDecimal");
-                      maybeAddImport("java.math.RoundingMode");
-                      return JavaTemplate.builder("BigDecimal d = BigDecimal.valueOf(1).setScale(1, RoundingMode.HALF_EVEN);")
-                        .imports("java.math.BigDecimal", "java.math.RoundingMode")
-                        .build()
-                        .apply(
-                          updateCursor(c),
-                          c.getBody().getCoordinates().lastStatement()
-                        );
-                  }
-              }
-            ).withMaxCycles(1)),
+            new JavaIsoVisitor<>() {
+                @Override
+                public J.ClassDeclaration visitClassDeclaration(J.ClassDeclaration classDecl, ExecutionContext ctx) {
+                    J.ClassDeclaration c = super.visitClassDeclaration(classDecl, ctx);
+                    maybeAddImport("java.math.BigDecimal");
+                    maybeAddImport("java.math.RoundingMode");
+                    return JavaTemplate.builder("BigDecimal d = BigDecimal.valueOf(1).setScale(1, RoundingMode.HALF_EVEN);")
+                      .imports("java.math.BigDecimal", "java.math.RoundingMode")
+                      .build()
+                      .apply(
+                        updateCursor(c),
+                        c.getBody().getCoordinates().lastStatement()
+                      );
+                }
+            }
+          ).withMaxCycles(1)),
           java(
             """
               package a;
@@ -410,10 +487,10 @@ class AddImportTest implements RewriteTest {
               """,
             """
               package a;
-                            
+
               import java.math.BigDecimal;
               import java.math.RoundingMode;
-                            
+
               class A {
                   BigDecimal d = BigDecimal.valueOf(1).setScale(1, RoundingMode.HALF_EVEN);
               }
@@ -429,7 +506,7 @@ class AddImportTest implements RewriteTest {
           java(
             """
               package a;
-                            
+
               class A {}
               """
           )
@@ -443,7 +520,7 @@ class AddImportTest implements RewriteTest {
           java(
             """
               import java.util.List;
-                            
+
               /**
                * My type
                */
@@ -451,9 +528,9 @@ class AddImportTest implements RewriteTest {
               """,
             """
               import java.util.List;
-                            
+
               import static java.util.Collections.*;
-                            
+
               /**
                * My type
                */
@@ -474,9 +551,9 @@ class AddImportTest implements RewriteTest {
               """,
             """
               package a;
-                            
+
               import java.util.List;
-                            
+
               class A {}
               """
           )
@@ -485,14 +562,14 @@ class AddImportTest implements RewriteTest {
 
     @Test
     void importsAddedInAlphabeticalOrder() {
-        List<String> otherPackages = Arrays.asList("c", "c.c", "c.c.c");
+        List<String> otherPackages = List.of("c", "c.c", "c.c.c");
         List<SourceSpecs> otherImports = new ArrayList<>();
         for (int i = 0; i < otherPackages.size(); i++) {
             String pkg = otherPackages.get(i);
             otherImports.add(java("package " + pkg + ";\npublic class C" + i + " {}", SourceSpec::skip));
         }
 
-        List<String> packages = Arrays.asList("b", "c.b", "c.c.b");
+        List<String> packages = List.of("b", "c.b", "c.c.b");
         for (int order = 0; order < packages.size(); order++) {
             String pkg = packages.get(order);
 
@@ -516,18 +593,18 @@ class AddImportTest implements RewriteTest {
               java(
                 """
                   package a;
-                      
+                  
                   import c.C0;
                   import c.c.C1;
                   import c.c.c.C2;
-                      
+                  
                   class A {}
                   """,
                 String.format("""
                     package a;
-                                        
+
                     %s
-                                        
+
                     class A {}
                     """,
                   expectedImports.stream().map(i -> "import " + i + ";").collect(Collectors.joining("\n"))
@@ -549,7 +626,7 @@ class AddImportTest implements RewriteTest {
           java(
             """
               package a;
-                            
+
               import java.util.List;
               class A {}
               """
@@ -564,7 +641,7 @@ class AddImportTest implements RewriteTest {
           java(
             """
               package a;
-                            
+
               import java.util.*;
               class A {}
               """
@@ -595,17 +672,17 @@ class AddImportTest implements RewriteTest {
           java(
             """
               package a;
-                            
+
               import static java.util.List.*;
               class A {}
               """,
             """
               package a;
-                            
+
               import java.util.List;
-                            
+
               import static java.util.List.*;
-                            
+
               class A {}
               """
           )
@@ -623,9 +700,9 @@ class AddImportTest implements RewriteTest {
               """,
             """
               import java.util.*;
-                              
+
               import static java.util.Collections.emptyList;
-                              
+
               class A {}
               """
           )
@@ -640,7 +717,7 @@ class AddImportTest implements RewriteTest {
           java(
             """
               package mycompany;
-                            
+
               public class Type {
                   public static String FIELD;
               }
@@ -650,7 +727,7 @@ class AddImportTest implements RewriteTest {
             "class A {}",
             """
               import static mycompany.Type.FIELD;
-                            
+
               class A {}
               """
           )
@@ -683,17 +760,17 @@ class AddImportTest implements RewriteTest {
           java(
             """
               public class A {
-                          
+
               }
               """,
             """
               import java.time.temporal.ChronoUnit;
-                          
+
               import static java.time.temporal.ChronoUnit.MILLIS;
-                          
+
               public class A {
                   ChronoUnit unit = MILLIS;
-                          
+
               }
               """
           )
@@ -708,9 +785,9 @@ class AddImportTest implements RewriteTest {
           java(
             """
               package a;
-                            
+
               import java.time.temporal.ChronoUnit;
-                            
+
               class A {
                   static final int MILLIS = 1;
                   ChronoUnit unit = ChronoUnit.MILLIS;
@@ -727,7 +804,7 @@ class AddImportTest implements RewriteTest {
           java(
             """
               package a;
-                            
+
               class A {}
               """
           )
@@ -740,7 +817,7 @@ class AddImportTest implements RewriteTest {
           spec -> spec.recipes(
             toRecipe(() -> new JavaIsoVisitor<>() {
                 @Override
-                public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, ExecutionContext executionContext) {
+                public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, ExecutionContext ctx) {
                     return method.withSelect(null);
                 }
             }),
@@ -749,9 +826,9 @@ class AddImportTest implements RewriteTest {
           java(
             """
               package a;
-                            
+
               import java.util.List;
-                            
+
               class A {
                   public A() {
                       List<String> list = java.util.Collections.emptyList();
@@ -760,14 +837,57 @@ class AddImportTest implements RewriteTest {
               """,
             """
               package a;
-                            
+
               import java.util.List;
-                            
+
               import static java.util.Collections.emptyList;
-                            
+
               class A {
                   public A() {
                       List<String> list = emptyList();
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void addNamedStaticImportWhenReferenced2() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
+              @Override
+              public J.MethodDeclaration visitMethodDeclaration(J.MethodDeclaration method, ExecutionContext ctx) {
+                  method = super.visitMethodDeclaration(method, ctx);
+                  method = JavaTemplate.builder("List<Builder> list = new ArrayList<>();")
+                    .imports("java.util.ArrayList", "java.util.List")
+                    .staticImports("java.util.Calendar.Builder")
+                    .build()
+                    .apply(getCursor(), method.getBody().getCoordinates().firstStatement());
+                  maybeAddImport("java.util.ArrayList");
+                  maybeAddImport("java.util.List");
+                  maybeAddImport("java.util.Calendar", "Builder");
+                  return method;
+              }
+          }).withMaxCycles(1)),
+          java(
+            """
+              import static java.util.Calendar.Builder;
+
+              class A {
+                  public A() {
+                  }
+              }
+              """,
+            """
+              import java.util.ArrayList;
+              import java.util.List;
+
+              import static java.util.Calendar.Builder;
+
+              class A {
+                  public A() {
+                      List<Builder> list = new ArrayList<>();
                   }
               }
               """
@@ -782,7 +902,7 @@ class AddImportTest implements RewriteTest {
           java(
             """
               package a;
-                            
+
               class A {}
               """
           )
@@ -795,7 +915,7 @@ class AddImportTest implements RewriteTest {
           spec -> spec.recipes(
             toRecipe(() -> new JavaIsoVisitor<>() {
                 @Override
-                public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, ExecutionContext executionContext) {
+                public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, ExecutionContext ctx) {
                     if (method.getName().getSimpleName().equals("emptyList")) {
                         return method.withSelect(null);
                     }
@@ -807,9 +927,9 @@ class AddImportTest implements RewriteTest {
           java(
             """
               package a;
-                              
+
               import java.util.List;
-                              
+
               class A {
                   public A() {
                       List<String> list = java.util.Collections.emptyList();
@@ -818,11 +938,11 @@ class AddImportTest implements RewriteTest {
               """,
             """
               package a;
-                              
+
               import java.util.List;
-                              
+
               import static java.util.Collections.*;
-                              
+
               class A {
                   public A() {
                       List<String> list = emptyList();
@@ -883,14 +1003,14 @@ class AddImportTest implements RewriteTest {
             """
               import foo.B;
               import foo.C;
-                              
+
               import java.util.Collections;
               import java.util.List;
               import java.util.HashSet;
               import java.util.HashMap;
               import java.util.Map;
               import java.util.Set;
-                              
+
               class A {
                   B b = new B();
                   C c = new C();
@@ -903,7 +1023,7 @@ class AddImportTest implements RewriteTest {
             """
               import foo.B;
               import foo.C;
-                              
+
               import java.util.*;
 
               class A {
@@ -912,7 +1032,7 @@ class AddImportTest implements RewriteTest {
                   Map<String, String> map = new HashMap<>();
                   Set<String> set = new HashSet<>();
                   List<String> test = Collections.singletonList("test");
-                  List<String> test2 = new java.util.ArrayList<>();
+                  List<String> test2 = new ArrayList<>();
               }
               """
           )
@@ -928,15 +1048,15 @@ class AddImportTest implements RewriteTest {
             """
               import javax.ws.rs.Path;
               import javax.ws.rs.Path;
-                            
+
               class A {}
               """,
             """
               import org.springframework.http.MediaType;
-                            
+
               import javax.ws.rs.Path;
               import javax.ws.rs.Path;
-                            
+
               class A {}
               """
           )
@@ -952,15 +1072,15 @@ class AddImportTest implements RewriteTest {
             """
               import org.foo.B;
               import org.foo.A;
-                            
+
               class A {}
               """,
             """
               import org.foo.B;
               import org.foo.A;
-                            
+
               import java.time.Duration;
-                            
+
               class A {}
               """
           )
@@ -1136,7 +1256,7 @@ class AddImportTest implements RewriteTest {
               """,
             """
               import java.util.List;
-                            
+
               import static java.util.Collections.*;
               """
           )
@@ -1154,9 +1274,9 @@ class AddImportTest implements RewriteTest {
               """.replace("\n", "\r\n"),
             """
               package a;
-                            
+
               import java.util.List;
-                            
+
               class A {}
               """.replace("\n", "\r\n")
           )
@@ -1170,17 +1290,17 @@ class AddImportTest implements RewriteTest {
           java(
             """
               package a;
-              
+
               import java.util.Set;
-              
+
               class A {}
               """.replace("\n", "\r\n"),
             """
               package a;
-                            
+
               import java.util.List;
               import java.util.Set;
-                            
+
               class A {}
               """.replace("\n", "\r\n")
           )
@@ -1194,13 +1314,13 @@ class AddImportTest implements RewriteTest {
           java(
             """
               import java.util.Set;
-              
+
               class A {}
               """.replace("\n", "\r\n"),
             """        
               import java.util.List;
               import java.util.Set;
-                            
+
               class A {}
               """.replace("\n", "\r\n")
           )
@@ -1214,13 +1334,13 @@ class AddImportTest implements RewriteTest {
           java(
             """
               package a;
-              
+
               import java.util.Arrays;
               import java.util.Set;
               """.replace("\n", "\r\n"),
             """
               package a;
-              
+
               import java.util.Arrays;
               import java.util.List;
               import java.util.Set;
@@ -1269,10 +1389,10 @@ class AddImportTest implements RewriteTest {
                * limitations under the License.
                */
               """.replace("\n", "\r\n") +
-            """
-              import java.util.Arrays;
-              import java.util.Set;
-              """,
+              """
+                import java.util.Arrays;
+                import java.util.Set;
+                """,
             """
               /*
                * Copyright 2023 the original author or authors.
@@ -1305,31 +1425,31 @@ class AddImportTest implements RewriteTest {
             """
               import java.util.Arrays;
               import java.util.Set;
-              
+
               """ +
-            """
-              /**
-               * Copyright 2023 the original author or authors.
-               * <p>
-               * Licensed under the Apache License, Version 2.0 (the "License");
-               * you may not use this file except in compliance with the License.
-               * You may obtain a copy of the License at
-               * <p>
-               * https://www.apache.org/licenses/LICENSE-2.0
-               * <p>
-               * Unless required by applicable law or agreed to in writing, software
-               * distributed under the License is distributed on an "AS IS" BASIS,
-               * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-               * See the License for the specific language governing permissions and
-               * limitations under the License.
-               */
-              """.replace("\n", "\r\n") +
-            "class Foo {}",
+              """
+                /**
+                 * Copyright 2023 the original author or authors.
+                 * <p>
+                 * Licensed under the Apache License, Version 2.0 (the "License");
+                 * you may not use this file except in compliance with the License.
+                 * You may obtain a copy of the License at
+                 * <p>
+                 * https://www.apache.org/licenses/LICENSE-2.0
+                 * <p>
+                 * Unless required by applicable law or agreed to in writing, software
+                 * distributed under the License is distributed on an "AS IS" BASIS,
+                 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+                 * See the License for the specific language governing permissions and
+                 * limitations under the License.
+                 */
+                """.replace("\n", "\r\n") +
+              "class Foo {}",
             """
               import java.util.Arrays;
               import java.util.List;
               import java.util.Set;
-              
+
               /**
                * Copyright 2023 the original author or authors.
                * <p>
@@ -1350,4 +1470,274 @@ class AddImportTest implements RewriteTest {
           )
         );
     }
+
+    @Test
+    void fullyQualifyOnAmbiguousImport() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
+              @Override
+              public J.Block visitBlock(J.Block body, ExecutionContext ctx) {
+                  maybeAddImport("java.sql.Date");
+                  JavaTemplate template = JavaTemplate.builder(
+                      "Date sqlDate = new Date(System.currentTimeMillis());")
+                    .imports("java.sql.Date")
+                    .build();
+                  return template.apply(updateCursor(body), body.getCoordinates().firstStatement());
+              }
+          }).withMaxCycles(1)),
+          java(
+            """
+              import java.util.Date;
+
+              class Ambiguous {
+                  Date date = new Date(System.currentTimeMillis());
+              }
+              """,
+            """
+              import java.util.Date;
+
+              class Ambiguous {
+                  java.sql.Date sqlDate = new java.sql.Date(System.currentTimeMillis());
+                  Date date = new Date(System.currentTimeMillis());
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void fullyQualifyOnAmbiguousStaticFieldImport() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
+                @Override
+                public J.Block visitBlock(J.Block body, ExecutionContext ctx) {
+                    maybeAddImport("java.awt.Color", "RED", true);
+                    maybeAddImport("java.awt.Color", true);
+                    JavaTemplate template = JavaTemplate.builder(
+                        "Color color = RED;")
+                      .imports("java.awt.Color")
+                      .staticImports("java.awt.Color.RED")
+                      .build();
+                    return template.apply(updateCursor(body), body.getCoordinates().firstStatement());
+                }
+            }).withMaxCycles(1))
+            .parser(JavaParser.fromJavaVersion().dependsOn(
+              """
+                package com.example;
+
+                public class CustomColor {
+                    public static final String RED = "red";
+                }
+                """
+            )),
+          java(
+            """
+              import static com.example.CustomColor.RED;
+
+              class Ambiguous {
+                  void method() {
+                      // RED is from com.example.CustomColor
+                      System.out.println(RED);
+                  }
+              }
+              """,
+            """
+              import java.awt.Color;
+
+              import static com.example.CustomColor.RED;
+
+              class Ambiguous {
+                  Color color = Color.RED;
+                  void method() {
+                      // RED is from com.example.CustomColor
+                      System.out.println(RED);
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void fullyQualifyOnAmbiguousStaticMethodImport() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
+              @Override
+              public J.Block visitBlock(J.Block body, ExecutionContext ctx) {
+                  maybeAddImport("java.util.Arrays", "sort", true);
+                  maybeAddImport("java.util.List", true);
+                  JavaTemplate template = JavaTemplate.builder(
+                      "List<Integer> list = sort(new int[]{1, 2, 3});")
+                    .imports("java.util.List")
+                    .staticImports("java.util.Arrays.sort")
+                    .build();
+                  return template.apply(updateCursor(body), body.getCoordinates().firstStatement());
+              }
+          }).withMaxCycles(1)),
+          java(
+            """
+              import static java.util.Collections.sort;
+
+              import java.util.ArrayList;
+
+              class Ambiguous {
+                  void method() {
+                      sort(new ArrayList<String>());
+                  }
+              }
+              """,
+            """
+              import static java.util.Collections.sort;
+
+              import java.util.ArrayList;
+              import java.util.List;
+
+              class Ambiguous {
+                  List<Integer> list = java.util.Arrays.sort(new int[]{1, 2, 3});
+                  void method() {
+                      sort(new ArrayList<String>());
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite/pull/5530")
+    @Test
+    void importWithNestedClass() {
+        @Language("java") final String auxSource = """
+          package com.example;
+          
+          public interface A {
+              enum DataType {
+                  TYPE_1,
+                  TYPE_2
+              }
+          }
+          """;
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
+                @Override
+                public J.Block visitBlock(J.Block body, ExecutionContext ctx) {
+                    JavaTemplate template = JavaTemplate.builder(
+                        "DataType d2 = DataType.TYPE_2;")
+                      .javaParser(JavaParser.fromJavaVersion().dependsOn(auxSource))
+                      .imports("com.example.A.DataType")
+                      .build();
+                    maybeAddImport("com.example.A.DataType");
+                    return template.apply(updateCursor(body), body.getCoordinates().firstStatement());
+                }
+            }).withMaxCycles(1))
+            .parser(JavaParser.fromJavaVersion().dependsOn(auxSource)),
+          java(
+            """
+              import com.example.A;
+              import com.example.A.DataType;
+
+              class Test {
+                  DataType d1 = DataType.TYPE_1;
+                  A a;
+              }
+              """,
+            """
+              import com.example.A;
+              import com.example.A.DataType;
+
+              class Test {
+                  DataType d2 = DataType.TYPE_2;
+                  DataType d1 = DataType.TYPE_1;
+                  A a;
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void codeSanityCheck() {
+        rewriteRun(
+          spec -> spec.parser(JavaParser.fromJavaVersion().dependsOn(
+            """
+              package com.ex.app.config;
+              public class OldA {}
+              """,
+            """
+              package com.ex.app.task;
+              public class OldB {}
+              """,
+            """
+              package com.ex.app.task;
+              public class OldC {}
+              """,
+            """
+              package com.ex.app.task;
+              public class OldD {}
+              """,
+            """
+              package com.ex.app.task;
+              public class OldE {}
+              """
+          )).recipes(
+            new ChangeType("com.ex.app.config.OldA", "com.ex.app.config.NewA", null),
+            new ChangeType("com.ex.app.task.OldB", "com.ex.app.task.NewB", null),
+            new ChangeType("com.ex.app.task.OldC", "com.ex.app.task.NewC", null),
+            new ChangeType("com.ex.app.task.OldD", "com.ex.app.task.NewD", null),
+            new ChangeType("com.ex.app.task.OldE", "com.ex.app.task.NewE", null)
+          ),
+          java(
+            """
+              package sample;
+              
+              import com.ex.app.config.OldA;
+              import com.ex.app.task.OldB;
+              import com.ex.app.task.OldC;
+              import com.ex.app.task.OldD;
+              import com.ex.app.task.OldE;
+              
+              public class A {
+                  private final OldA a;
+                  private final OldB b;
+                  private final OldC c;
+                  private final OldD d;
+                  private final OldE e;
+              
+                  public A(OldA a, OldB b, OldC c, OldD d, OldE e) {
+                      this.a = a;
+                      this.b = b;
+                      this.c = c;
+                      this.d = d;
+                      this.e = e;
+                  }
+              }
+              """,
+            """
+          package sample;
+          
+          import com.ex.app.config.NewA;
+          import com.ex.app.task.NewB;
+          import com.ex.app.task.NewC;
+          import com.ex.app.task.NewD;
+          import com.ex.app.task.NewE;
+          
+          public class A {
+              private final NewA a;
+              private final NewB b;
+              private final NewC c;
+              private final NewD d;
+              private final NewE e;
+          
+              public A(NewA a, NewB b, NewC c, NewD d, NewE e) {
+                  this.a = a;
+                  this.b = b;
+                  this.c = c;
+                  this.d = d;
+                  this.e = e;
+              }
+          }
+          """
+          )
+        );
+    }
+
 }
