@@ -18,16 +18,20 @@ package org.openrewrite.java;
 import org.intellij.lang.annotations.Language;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
-import org.openrewrite.DocumentExample;
-import org.openrewrite.Issue;
-import org.openrewrite.PathUtils;
+import org.openrewrite.*;
+import org.openrewrite.java.tree.J;
 import org.openrewrite.java.tree.JavaType;
 import org.openrewrite.java.tree.TypeUtils;
 import org.openrewrite.test.RecipeSpec;
 import org.openrewrite.test.RewriteTest;
+import org.openrewrite.test.SourceSpec;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.openrewrite.java.Assertions.java;
+import static org.openrewrite.properties.Assertions.properties;
+import static org.openrewrite.xml.Assertions.xml;
+import static org.openrewrite.yaml.Assertions.yaml;
 
 @SuppressWarnings("ConstantConditions")
 class ChangeTypeTest implements RewriteTest {
@@ -67,6 +71,60 @@ class ChangeTypeTest implements RewriteTest {
         );
     }
 
+    @Test
+    void okWithTopLevelType() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeType("java.util.Map$Entry", "java.util.List", true)),
+          java(
+            """
+              import java.util.Map;
+              
+              public class TestController {
+              
+                  public Map.Entry respond() {
+                     return null;
+                  }
+              }
+              """,
+            """
+              import java.util.List;
+              
+              public class TestController {
+              
+                  public List respond() {
+                     return null;
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Disabled("A bug fix reported by the community but not yet fixed")
+    @Test
+    void conflictingImports() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeType(
+            "java.util.List", "kotlin.collections.Set", true)),
+          java(
+            """
+              import java.util.*;
+              class Test {
+                  Set<String> s;
+                  List<String> s;
+              }
+              """,
+            """
+              import java.util.*;
+              class Test {
+                  Set<String> s;
+                  kotlin.collections.Set<String> s;
+              }
+              """
+          )
+        );
+    }
+
     @SuppressWarnings({"deprecation", "KotlinRedundantDiagnosticSuppress"})
     @Test
     void starImport() {
@@ -75,7 +133,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               import java.util.logging.*;
-
+              
               class Test {
                   static void method() {
                       LoggingMXBean loggingBean = null;
@@ -85,7 +143,7 @@ class ChangeTypeTest implements RewriteTest {
             """
               import java.lang.management.PlatformLoggingMXBean;
               import java.util.logging.*;
-
+              
               class Test {
                   static void method() {
                       PlatformLoggingMXBean loggingBean = null;
@@ -171,6 +229,7 @@ class ChangeTypeTest implements RewriteTest {
               class Test {
                   Entry p;
                   Map.Entry p2;
+                  java.util.Map.Entry p3;
               }
               """,
             """
@@ -179,6 +238,7 @@ class ChangeTypeTest implements RewriteTest {
               class Test {
                   List p;
                   List p2;
+                  List p3;
               }
               """
           )
@@ -322,7 +382,11 @@ class ChangeTypeTest implements RewriteTest {
           java(a2),
           java(
             "public class B extends a.A1 {}",
-            "public class B extends a.A2 {}"
+            """
+              import a.A2;
+              
+              public class B extends A2 {}
+              """
           )
         );
     }
@@ -334,8 +398,14 @@ class ChangeTypeTest implements RewriteTest {
           java("package a.b.c;\npublic @interface A1 {}"),
           java("package a.b.d;\npublic @interface A2 {}"),
           java(
-            "@a.b.c.A1 public class B {}",
-            "@a.b.d.A2 public class B {}"
+            """
+              @a.b.c.A1 public class B {}
+              """,
+            """
+              import a.b.d.A2;
+              
+              @A2 public class B {}
+              """
           )
         );
     }
@@ -952,7 +1022,7 @@ class ChangeTypeTest implements RewriteTest {
               
               public class OuterClass {
                   public static class InnerClass {
-                            
+              
                   }
               }
               """
@@ -1325,7 +1395,7 @@ class ChangeTypeTest implements RewriteTest {
               """,
             spec -> spec.path("a/b/NoMatch.java").afterRecipe(cu -> {
                 assertThat(PathUtils.separatorsToUnix(cu.getSourcePath().toString())).isEqualTo("a/b/NoMatch.java");
-                assertThat(TypeUtils.isOfClassType(cu.getClasses().get(0).getType(), "x.y.Target")).isTrue();
+                assertThat(TypeUtils.isOfClassType(cu.getClasses().getFirst().getType(), "x.y.Target")).isTrue();
             })
           )
         );
@@ -1349,7 +1419,7 @@ class ChangeTypeTest implements RewriteTest {
               """,
             spec -> spec.path("a/b/Original.java").afterRecipe(cu -> {
                 assertThat(PathUtils.separatorsToUnix(cu.getSourcePath().toString())).isEqualTo("x/y/Target.java");
-                assertThat(TypeUtils.isOfClassType(cu.getClasses().get(0).getType(), "x.y.Target")).isTrue();
+                assertThat(TypeUtils.isOfClassType(cu.getClasses().getFirst().getType(), "x.y.Target")).isTrue();
             })
           )
         );
@@ -1387,7 +1457,7 @@ class ChangeTypeTest implements RewriteTest {
           java(
             """
               package a.b;
-
+              
               class Original {
               }
               """,
@@ -1553,9 +1623,166 @@ class ChangeTypeTest implements RewriteTest {
 
                 assertThat(TypeUtils.asFullyQualified(methodType.getReturnType()).getFullyQualifiedName())
                   .isEqualTo("a.A2");
-                assertThat(TypeUtils.asFullyQualified(methodType.getParameterTypes().get(0)).getFullyQualifiedName())
+                assertThat(TypeUtils.asFullyQualified(methodType.getParameterTypes().getFirst()).getFullyQualifiedName())
                   .isEqualTo("a.A2");
             })
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite-static-analysis/issues/582")
+    @Test
+    void renameWhenInitializerTypeMatches() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeType("java.util.ArrayList", "java.util.LinkedList", false)),
+          //language=java
+          java(
+            """
+              import java.util.*;
+
+              class Test {
+                  void test() {
+                      List<Integer> list = new ArrayList<>();
+                      list.add(1);
+                      list.add(2);
+                  }
+              }
+              """,
+            """
+              import java.util.*;
+
+              class Test {
+                  void test() {
+                      List<Integer> list = new LinkedList<>();
+                      list.add(1);
+                      list.add(2);
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void doNotRenameRandomVariablesMatchingClassName() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeType("a.A1", "a.A2", false)),
+          java(
+            """
+              package a;
+              public class A1 {
+              }
+              """,
+            """
+              package a;
+              public class A2 {
+              }
+              """
+          ),
+          java(
+            """
+              package org.foo;
+              
+              import a.A1;
+              
+              public class Example {
+                  public String method(A1 a, String a1) {
+                      return a1;
+                  }
+              }
+              """,
+            """
+              package org.foo;
+              
+              import a.A2;
+              
+              public class Example {
+                  public String method(A2 a, String a1) {
+                      return a1;
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void noChangeToVariableNameWithoutChangeToType() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeType("a.A1", "a.A2", true)),
+          java(
+            """
+              package a;
+              public class A1 {
+              }
+              """
+          ),
+          java(
+            """
+              package a;
+              public class A2 {
+              }
+              """
+          ),
+          java(
+            """
+              package org.foo;
+              
+              import a.A1;
+              import a.A2;
+              
+              public class Example {
+                  public A1 method1(A1 a1) {
+                      return a1;
+                  }
+                  public A2 method2(A2 a1) {
+                      return a1; // Unchanged
+                  }
+              }
+              """,
+            """
+              package org.foo;
+              
+              import a.A2;
+              
+              public class Example {
+                  public A2 method1(A2 a1) {
+                      return a1;
+                  }
+                  public A2 method2(A2 a1) {
+                      return a1; // Unchanged
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void doNotRenameVariableNeedlessly() {
+        // Comparison to java.util.Optional: this method is equivalent to Java 8's Optional.orElse(null).
+        rewriteRun(
+          spec -> spec.recipe(new ChangeType("java.awt.List", "java.util.List", false)),
+          //language=java
+          java(
+            """
+              import java.awt.List;
+              
+              class A {
+                  List foo(List list) {
+                      return list;
+                  }
+              }
+              """,
+            """
+              import java.util.List;
+              
+              class A {
+                  List foo(List list) {
+                      return list;
+                  }
+              }
+              """
           )
         );
     }
@@ -1772,11 +1999,10 @@ class ChangeTypeTest implements RewriteTest {
           spec -> spec.recipe(new ChangeType("Test.InnerA", "Test.InnerB", true)),
           java(
             """
-
               public class Test {
                   private class InnerA {
                   }
-                  
+              
                   private class InnerB {
                   }
               
@@ -1789,7 +2015,7 @@ class ChangeTypeTest implements RewriteTest {
               public class Test {
                   private class InnerA {
                   }
-                  
+              
                   private class InnerB {
                   }
               
@@ -1841,6 +2067,352 @@ class ChangeTypeTest implements RewriteTest {
                   public Test test() {
                       return new Test();
                   }
+              }
+              """
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite-jackson/pull/6")
+    @Test
+    void changeTypeOfStaticImportOfNestedEnumValueUsed() {
+        rewriteRun(
+          recipeSpec -> recipeSpec.recipes(
+            new ChangeType(
+              "org.codehaus.jackson.map.ObjectMapper",
+              "com.fasterxml.jackson.databind.ObjectMapper", true),
+            new ChangeType(
+              "org.codehaus.jackson.map.SerializationConfig$Feature",
+              "com.fasterxml.jackson.databind.SerializationFeature", true)
+          ),
+          java(
+            """
+              package org.codehaus.jackson.map;
+              public class SerializationConfig {
+                  public static enum Feature {
+                      WRAP_ROOT_VALUE
+                  }
+              }
+              """,
+            SourceSpec::skip
+          ),
+          java(
+            """
+              package org.codehaus.jackson.map;
+              public class ObjectMapper {
+                  public ObjectMapper configure(SerializationConfig.Feature f, boolean state) {
+                      return this;
+                  }
+              }
+              """,
+            SourceSpec::skip
+          ),
+          java(
+            """
+              import org.codehaus.jackson.map.ObjectMapper;
+              
+              import static org.codehaus.jackson.map.SerializationConfig.Feature.WRAP_ROOT_VALUE;
+              
+              class A {
+                  void test() {
+                      ObjectMapper mapper = new ObjectMapper();
+                      mapper.configure(WRAP_ROOT_VALUE, true);
+                  }
+              }
+              """,
+            """
+              import com.fasterxml.jackson.databind.ObjectMapper;
+              
+              import static com.fasterxml.jackson.databind.SerializationFeature.WRAP_ROOT_VALUE;
+              
+              class A {
+                  void test() {
+                      ObjectMapper mapper = new ObjectMapper();
+                      mapper.configure(WRAP_ROOT_VALUE, true);
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    @Issue("https://github.com/openrewrite/rewrite/issues/4452")
+    @Disabled("flaky on CI")
+    void shouldFullyQualifyWhenNewTypeIsAmbiguous() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeType(
+            "javax.annotation.Nonnull",
+            "org.checkerframework.checker.nullness.qual.NonNull",
+            null)),
+          // language=java
+          java(
+            """
+              import lombok.NonNull;
+              import javax.annotation.Nonnull;
+              import org.immutables.value.Value;
+              
+              @Value.Immutable
+              @Value.Style(passAnnotations = Nonnull.class)
+              interface ConflictingImports {
+                      void lombokMethod(@NonNull final String lombokNonNull){}
+              }
+              """,
+            """
+              import lombok.NonNull;
+              import org.immutables.value.Value;
+              
+              @Value.Immutable
+              @Value.Style(passAnnotations = org.checkerframework.checker.nullness.qual.NonNull.class)
+              interface ConflictingImports {
+                      void lombokMethod(@NonNull final String lombokNonNull){}
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void shouldNotFullyQualifyWhenNewTypeIsAlreadyUsed() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeType(
+            "org.a.A",
+            "org.ab.AB",
+            true)),
+          java(
+            """
+              package org.a;
+              
+              public class A {
+                public static String A = "A";
+              }
+              """
+          ),
+          java(
+            """
+              package org.ab;
+              
+              public class AB {
+                public static String A = "A";
+                public static String B = "B";
+              }
+              """
+          ),
+          // language=java
+          java(
+            """
+              import org.a.A;
+              import org.ab.AB;
+              
+              class Letters {
+                String a = A.A;
+                String b = AB.B;
+              }
+              """,
+            """
+              import org.ab.AB;
+              
+              class Letters {
+                String a = AB.A;
+                String b = AB.B;
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void changeTypeInSpringXml() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeType("test.type.A", "test.type.B", true)),
+          xml(
+            """
+              <?xml version="1.0" encoding="UTF-8"?>
+              <beans xsi:schemaLocation="www.springframework.org/schema/beans">
+                <bean id="abc" class="test.type.A"/>
+              </beans>
+              """,
+            """
+              <?xml version="1.0" encoding="UTF-8"?>
+              <beans xsi:schemaLocation="www.springframework.org/schema/beans">
+                <bean id="abc" class="test.type.B"/>
+              </beans>
+              """
+          )
+        );
+    }
+
+    @Test
+    void changeTypeWorksOnDirectInvocations() {
+        rewriteRun(
+          spec -> spec.recipe(Recipe.noop()), // do not run the default recipe
+          java(
+            """
+              package hello;
+              public class HelloClass {}
+              """,
+            spec -> spec.beforeRecipe((source) -> {
+                TreeVisitor<?, ExecutionContext> visitor = new ChangeType("hello.HelloClass", "hello.GoodbyeClass", false).getVisitor();
+
+                J.CompilationUnit cu = (J.CompilationUnit) visitor.visit(source, new InMemoryExecutionContext());
+                assertEquals("GoodbyeClass", cu.getClasses().getFirst().getSimpleName());
+
+                J.ClassDeclaration cd = (J.ClassDeclaration) visitor.visit(source.getClasses().getFirst(), new InMemoryExecutionContext());
+                assertEquals("GoodbyeClass", cd.getSimpleName());
+            }))
+        );
+    }
+
+    @Test
+    void changeTypeInPropertiesFile() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeType("java.lang.String", "java.lang.Integer", true)),
+          properties(
+            """
+              a.property=java.lang.String
+              c.property=java.lang.StringBuilder
+              b.property=String
+              """,
+            """
+              a.property=java.lang.Integer
+              c.property=java.lang.StringBuilder
+              b.property=String
+              """,
+                spec -> spec.path("application.properties"))
+        );
+    }
+
+    @Test
+    void changeTypeInYaml() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeType("java.lang.String", "java.lang.Integer", true)),
+          yaml(
+            """
+              root:
+                  a: java.lang.String
+                  b: java.lang.StringBuilder
+                  c: java.lang.test.String
+                  d: String
+              """,
+            """
+              root:
+                  a: java.lang.Integer
+                  b: java.lang.StringBuilder
+                  c: java.lang.test.String
+                  d: String
+              """,
+            spec -> spec.path("application.yaml")
+          )
+        );
+    }
+
+    @Test
+    @Issue("https://github.com/openrewrite/rewrite/issues/4773")
+    void noRenameOfTypeWithMatchingPrefix() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeType("org.codehaus.jackson.annotate.JsonIgnoreProperties", "com.fasterxml.jackson.annotation.JsonIgnoreProperties", false))
+            .parser(JavaParser.fromJavaVersion()
+              .dependsOn(
+                """
+                  package org.codehaus.jackson.annotate;
+                  public @interface JsonIgnoreProperties {
+                      boolean ignoreUnknown() default false;
+                  }
+                  """,
+                """
+                  package org.codehaus.jackson.annotate;
+                  public @interface JsonIgnore {
+                  }
+                  """
+              )
+            ),
+          java(
+            """
+              import org.codehaus.jackson.annotate.JsonIgnore;
+              import org.codehaus.jackson.annotate.JsonIgnoreProperties;
+              
+              @JsonIgnoreProperties(ignoreUnknown = true)
+              public class myClass {
+                  @JsonIgnore
+                  public boolean isDirty() {
+                      return false;
+                  }
+              }
+              """,
+            """
+              import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+              import org.codehaus.jackson.annotate.JsonIgnore;
+              
+              @JsonIgnoreProperties(ignoreUnknown = true)
+              public class myClass {
+                  @JsonIgnore
+                  public boolean isDirty() {
+                      return false;
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    @Issue("https://github.com/openrewrite/rewrite/issues/4764")
+    void changeTypeOfInnerClass() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeType("foo.A$Builder", "bar.A$Builder", true))
+            .parser(JavaParser.fromJavaVersion().dependsOn(
+                """
+                  package foo;
+                  
+                  public class A {
+                    public A.Builder builder() {
+                      return new A.Builder();
+                    }
+                  
+                    public static class Builder {
+                      public A build() {
+                        return new A();
+                      }
+                    }
+                  }
+                  """,
+                """
+                  package bar;
+                  
+                  public class A {
+                    public A.Builder builder() {
+                      return new A.Builder();
+                    }
+                  
+                    public static class Builder {
+                      public A build() {
+                        return new A();
+                      }
+                    }
+                  }
+                  """
+              )
+            ),
+          java(
+            """
+              import foo.A;
+              import foo.A.Builder;
+              
+              class Test {
+                A test() {
+                    A.Builder b = A.builder();
+                    return b.build();
+                }
+              }
+              """,
+                """
+              import foo.A;
+              
+              class Test {
+                A test() {
+                    bar.A.Builder b = A.builder();
+                    return b.build();
+                }
               }
               """
           )
